src/components/note.css
.note {
  position: absolute;
  width: 250px;
  height: 250px;
  box-shadow: 2px 2px 4px gray;
  background-color: #ffe973;
}

.note-text {
  width: 230px;
  height: 230px;
  border: 0;
  resize: none;
  background-color: inherit;
  padding: 10px;
  font-family: "Caveat", cursive;
  font-size: 24px;
}

.note:hover .note-deleter {
  display: block;
}

.note-deleter {
  display: none;
  position: absolute;
  right: -12.5px;
  top: -12.5px;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background-color: black;
  cursor: pointer;
}

.note-deleter::after {
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  font-size: 20px;
  color: white;
  content: "\00D7";
  text-align: center;
}

